--- a/src/app/components/blogList/blogList.module.css
+++ b/src/app/components/blogList/blogList.module.css
@@ -1,7 +1,7 @@
 @media (min-width: 480px) {
   .blogsContainer {
     text-align: center;
-    /* margin: 80px; */
+    margin: 80px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,6 +25,6 @@
   .accessButton {
     width: 10rem;
     height: 3rem;
-    margin: 10px 0px;
+    margin: 10px 0px 50px 0px;
   }
 }
