--- a/src/app/components/podcast/podcast.module.css
+++ b/src/app/components/podcast/podcast.module.css
@@ -3,11 +3,19 @@
   width: 90%;
   height: 590px;
   text-align: center;
+  margin-bottom: -15vw;
 }
 .podcastHeader {
   margin-bottom: 48px;
 }
-@media (max-width: 430) {
+
+@media (max-width: 1024) and (min-width: 480) {
+  .podcastContainer {
+    margin-bottom: -20vw;
+  }
+}
+
+@media (max-width: 480) {
   .podcastContainer {
     margin: 0px;
     height: auto;
