--- a/src/app/components/podcastBanner/PodcastBanner.module.css
+++ b/src/app/components/podcastBanner/PodcastBanner.module.css
@@ -1,20 +1,33 @@
-.bannerContainer {
-  width: 100vw;
+/* .bannerContainer {
+  width: 100%;
   height: 65vh;
   background-image: url('../../images/podcast-banner.svg');
   background-repeat: no-repeat;
-  background-size: 100vw 65vh;
+  background-size: 100% 65vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+} */
+
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  height: 65vh;
+  object-fit: contain;
 }
 
 @media (max-width: 480px) {
-  .bannerContainer {
+  /* .bannerContainer {
     width: 100vw;
     height: 250px;
     background-size: 100vw 250px;
     background-repeat: no-repeat;
+  } */
+
+  .imageWrapper {
+    height: 250px;
   }
+
 }
+
