--- a/src/app/neurodivergentmates/page.module.css
+++ b/src/app/neurodivergentmates/page.module.css
@@ -1,4 +1,5 @@
-/* .main {
-    background-color: var(--BondBlackVariant);
+.main {
+    /* background-color: var(--BondBlackVariant); */
+    width: 100%;
   }
-   */
+  
